# RequiemServer

./: .gitignore  CMakeLists.txt  README.md  go.work  go.work.sum
common/: CMakeLists.txt  emu_constants.h  emu_oplist.h  emu_versions.cpp  emu_versions.h  eq_constants.h  eq_limits.cpp  eq_limits.h  eq_packet_structs.h  eq_stream_intf.h  inventory_profile.h  item_instance.cpp  item_instance.h  opcodemgr.h  ruletypes.h  shareddb.cpp  shareddb.h  version.h  zone_store.h
common/database/: database_update_manifest.cpp
common/patches/: patches.cpp  ss_define.h  web.cpp  web.h  web_limits.cpp  web_limits.h  web_ops.h  web_structs.h
common/repositories/base/: base_merchantlist_repository.h  base_merchantlist_temp_repository.h
dotnet_quests/qeynos/: Captain_Tillin.cs
loginserver/: client.cpp  client.h  client_manager.cpp  client_manager.h  login_types.h  server_manager.cpp  server_manager.h  world_server.cpp  world_server.h
loginserver/login_util/: login_opcodes.conf  login_opcodes_sod.conf  login_opcodes_web.conf
shared_memory/: items.cpp
utils/patches/: patch_Web.conf
utils/scripts/: eqemu_server.pl
webtransport/: CMakeLists.txt  install.sh  web.cpp  web.h
webtransport/go/: CMakeLists.txt  EQMessage.pb.go  EQMessage.proto  bridge.go  c_bridge.c  c_bridge.h  cert.go  client_interface.go  constants.go  go.mod  go.sum  server_interface.go  web.go  web_go.h  webtransport_server.py
webtransport/go/c/: c_bridge.c  c_bridge.h
webtransport/go/scripts/: opcode_dispatch.h  opcode_mapper.js  proto_gen.js  struct_parser.js
world/: client.cpp  main.cpp  worlddb.cpp
zone/: CMakeLists.txt  bot.h  client.cpp  client.h  client_packet.cpp  client_process.cpp  command.cpp  command.h  entity.h  expedition.h  main.cpp  mob_ai.cpp  object.h  pathfinder_nav_mesh.cpp  quest_parser_collection.cpp  zone.cpp  zone.h  zonedb.cpp  zonedb.h
zone/dotnet_quests/questinterface/: questinterface.i  swig.sh
zone/dotnet_quests/questinterface/DotNetBridge/: CompilerBridge.cs
zone/dotnet_quests/questinterface/DotNetTypes/: DotNetTypes.cs
